--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link>
+<head>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8833920155221666",
+            enable_page_level_ads: true
+        });
+    </script>
     <meta charset="UTF-8">
     <title>Mister Megabitico</title>
     <link href="playing-cards-lib/playingCards.ui.css" rel="stylesheet">
