--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
             });
         });
     </script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Jogo de cartas -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-8833920155221666"
-         data-ad-slot="7837919708"
-         data-ad-format="auto"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+    <!--&lt;!&ndash; Jogo de cartas &ndash;&gt;-->
+    <!--<ins class="adsbygoogle"-->
+         <!--style="display:block"-->
+         <!--data-ad-client="ca-pub-8833920155221666"-->
+         <!--data-ad-slot="7837919708"-->
+         <!--data-ad-format="auto"></ins>-->
+    <!--<script>-->
+        <!--(adsbygoogle = window.adsbygoogle || []).push({});-->
+    <!--</script>-->
 </body>
 </html>
