--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="cardTable">
     </div>
     <button id="de_novo" style="display:none;" onclick="location.reload();">Jogar de novo</button>
-
+    <br>
+    <a href="https://freebitco.in/?r=424213"><img src="https://static1.freebitco.in/banners/728x90-3.png"></a>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
