more bitcoin ad

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
+    <a href="https://freebitco.in/?r=424213"><img src="https://static1.freebitco.in/banners/728x90-3.png"></a>
+    <br>
     <h1>Escolha uma carta na sua cabeça e grave-a.</h1>
     <h2>Escolha a coluna que contenha a carta que voce escolheu clicando no botão abaixo referente a mesma</h2>
     <div class="chooseColumns">
