added tag to bitcoin link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
-    <a href="https://freebitco.in/?r=424213"><img src="https://static1.freebitco.in/banners/728x90-3.png"></a>
+    <a href="https://freebitco.in/?r=424213&tag=github"><img src="https://static1.freebitco.in/banners/728x90-3.png"></a>
     <br>
     <h1>Escolha uma carta na sua cabeça e grave-a.</h1>
     <h2>Escolha a coluna que contenha a carta que voce escolheu clicando no botão abaixo referente a mesma</h2>
@@ -27,7 +27,7 @@
     </div>
     <button id="de_novo" style="display:none;" onclick="location.reload();">Jogar de novo</button>
     <br>
-    <a href="https://freebitco.in/?r=424213"><img src="https://static1.freebitco.in/banners/728x90-3.png"></a>
+    <a href="https://freebitco.in/?r=424213&tag=github"><img src="https://static1.freebitco.in/banners/728x90-3.png"></a>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
